add player history menu and fixes placeholders